# NetCore

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.org
app/driver/: driver.c  driver.h
app/server/: server.cc  server.hh
app/user/: user.cc  user.cpp  user.hh
include/: bitmacros.h  common.h  driver.h  log.h  net.h  types.h
include/device/: device.h
include/driver/: driver.h
include/errors/: debug.h  errno.h  log.h
include/event/: buffer.h  event.h  localserver.h  signal.h  states.h  threadpool.h  timer.h
include/interface/: ipc.h  mockfs.h  sharemem.h  type.h
include/ipc/: ipc.h  rpc.h  sharemem.h  type.h
include/lock/: spinlock.h
include/lock_free/: bdqueue.h  defs.h  hash_table.h  list.h  memorypool.h  order_list.h  queue.h
include/log/: log.h
include/netstack/: arp.h  def.h  dhcp.h  ethernet.h  icmp.h  ip.h  ipv6.h  ndp.h  netstack.h  network.h  socket.h  tcp.h  tcp_connect.h  tcp_server.h  type.h  udp.h
include/netutil/: checksum.h  dhcp.h  dump.h  etharp.h  htons.h  icmp.h  icmpv6.h  ip.h  ipv6.h  mldv2.h  ndp.h  tcp.h  udp.h
include/socket/: def.h
scripts/: ifdown.sh  ifup.sh
src/: driver.c  user.cpp
src/device/: device.c  ethernet.c  icmp.c  ip.c  ndp.c
src/driver/: driver.c  tcp.c  udp.c
src/errors/: debug.c  errno.c  log.c
src/event/: event.c  localserver.c  localstates.c  memorypool.c  signal.c  states.c  threadpool.c  timer.c
src/interface/: ipc.c  mockfs.c  sharemem.c
src/ipc/: ipc.c  sharemem.c
src/lock_free/: bdqueue.c  hash_table.c  memorypool.c  order_list.c  queue.c
src/log/: log.c
src/mockfs/: fs.c
src/netstack/: arp.c  ethernet.c  icmp.c  icmpv6.c  ip.c  ip_assemble.c  ip_assemble.h  ip_gather.c  ip_gather.h  ip_slice.c  ip_slice.h  ipv6.c  ndp.c  netstack.c  network.c  tcp.c  tcp_connect.c  tcp_connect.h  tcp_server.c  tcp_server.h  udp.c  udp_server.c  udp_server.h
src/netutil/: checksum.c  dump.c  htons.c
tests/: CMakeLists.txt
tests/integration/: test_arp.c  test_icmp.c  test_main.c  test_timer.c
tests/system/: test_arp.c  test_icmp.c
tests/unit/: test_arp.c  test_buffer.c  test_checksum.c  test_driver.c  test_dump.c  test_ether.c  test_htons.c  test_main.c
